# zamlet

./: .bazelproject  .bazelrc  .gitignore  BUILD  CLAUDE.md  Dockerfile  Dockerfile.ci  MODULE.bazel  README.md  build.mill  deadlocks.txt  docker-compose.yml  docker-run.sh  docker.nix  mkdocs.yml  requirements.txt  shell.nix  verilog_common.bzl
python/: pyproject.toml
python/fmvpu/: BUILD  control_structures.py  packet_utils.py  params.json  params.py  test_common.bzl  test_utils.py  utils.py
python/fmvpu/adjustable_delay/: BUILD  test_adjustable_delay.py
python/fmvpu/amlet/: __init__.py  alu_instruction.py  alu_lite_instruction.py  amlet_params.py  control_instruction.py  instruction.py  ldst_instruction.py  packet_instruction.py  packet_utils.py  predicate_instruction.py
python/fmvpu/amlet_test/: BUILD  test_alu_basic.py  test_alurs_basic.py
python/fmvpu/bamlet/: bamlet_interface.py  bamlet_params.py
python/fmvpu/bamlet_kernels/: fft.py  kernel_utils.py  receive.py
python/fmvpu/bamlet_test/: BUILD  test_alu.py  test_alu_lite.py  test_basic.py  test_dependency_tracker.py  test_ldst.py  test_loops.py  test_packet.py  test_predicate.py  test_receive.py  test_write_im.py
python/fmvpu/data_memory/: BUILD  test_data_memory.py
python/fmvpu/gamlet_test/: BUILD  test_rename_basic.py
python/fmvpu/lane/: BUILD  instructions.py  lane_interface.py  lane_params.py  packet_utils.py  test_lane.py
python/fmvpu/lane_array/: lane_array_interface.py  lane_array_params.py
python/fmvpu/lane_array_test/: BUILD  test_lane_array.py
python/fmvpu/lane_grid/: BUILD  test_lane_grid.py  test_matrix_mult.py
python/fmvpu/lane_test/: BUILD  test_alu_basic.py  test_alurs_basic.py  test_instruction_memory.py  test_lane.py  test_lane_alu.py  test_lane_ldst.py  test_lane_packet.py  test_ldst.py  test_packet_switch.py  test_rff_basic.py
python/fmvpu/network/: BUILD  test_network.py
python/fmvpu/new_lane/: BUILD  instructions.py  lane_interface.py  lane_params.py  packet_utils.py  test_alu_basic.py  test_alurs_basic.py  test_lane.py  test_rff_basic.py
python/fmvpu/register_file/: BUILD  test_register_file.py
python/fmvpu/utils_test/: BUILD  test_dropping_fifo.py
python/riscv_model/: addresses.py  build_sgemv.sh  cache_table.py  dataset1.h  decode.py  decode_helpers.py  ew_convert.py  jamlet.py  kamlet.py  kinstructions.py  lamlet.py  log_utils.py  logging.txt  memlet.py  message.py  params.py  register_file_slot.py  register_names.py  response_tracker.py  router.py  run_lamlet.py  runner.py  scalar.py  sgemv.py  state.py  test_addresses.py  test_memlet.py  test_router.py  utils.py  vec-sgemv.S  vec-sgemv_main.c  vload.py
python/riscv_model/common/: test.ld  vpu_alloc.c
python/riscv_model/instructions/: base_integer.py  compressed.py  control_flow.py  float.py  memory.py  multiply.py  system.py  vector.py
python/riscv_model/plan/: 05_integer_arithmetic.txt  07_float_arithmetic.txt  test_suite_reference.txt  tests_that_should_pass.txt
python/zamlet/: BUILD  CLAUDE.md  COMPARING_WITH_TEST.txt  LAMLET_ARCHITECTURE.md  LOGGING.txt  addresses.py  control_structures.py  decode.py  disasm_trace.py  future.py  generate_rtl.py  geometries.py  memlet.py  message.py  monitor.py  moore.py  ordered_buffer.py  params.py  program_info.py  register_file_slot.py  router.py  runner.py  synchronization.py  test_common.bzl  test_memlet.py  test_utils.py  trap.py  utils.py  waiting_item.py
python/zamlet/amlet/: alu_instruction.py  alu_lite_instruction.py  amlet_params.py  control_instruction.py  instruction.py  ldst_instruction.py  packet_instruction.py  packet_utils.py  predicate_instruction.py
python/zamlet/amlet_test/: BUILD  test_alu_basic.py  test_alurs_basic.py
python/zamlet/analysis/: plot_network.py  plot_queues.py
python/zamlet/bamlet/: __init__.py  bamlet_interface.py  bamlet_params.py
python/zamlet/bamlet_kernels/: fft.py  kernel_utils.py  receive.py
python/zamlet/bamlet_test/: BUILD  conftest.py  test_alu.py  test_alu_lite.py  test_basic.py  test_dependency_tracker.py  test_ldst.py  test_loops.py  test_packet.py  test_predicate.py  test_receive.py  test_write_im.py
python/zamlet/cocotb/: axi4_slave.py  axi_memory.py
python/zamlet/gamlet_test/: BUILD  __init__.py  test_rename_basic.py
python/zamlet/instructions/: __init__.py  base_integer.py  compressed.py  control_flow.py  custom.py  encode.py  float.py  memory.py  multiply.py  riscv_instr.py  system.py  vector.py
python/zamlet/jamlet/: __init__.py  jamlet.py  jamlet_params.py
python/zamlet/jamlet_test/: BUILD  test_witem_monitor.py
python/zamlet/kamlet/: cache_table.py  ew_convert.py  kamlet.py  kinstructions.py  rename_table.py
python/zamlet/kamlet_test/: BUILD  conftest.py  test_kamlet.py  test_synchronizer.py
python/zamlet/kernel_tests/: BUILD  conftest.py  plan.txt  run_kernel_test.py
python/zamlet/lamlet/: ident_query.py  lamlet.py  lamlet_waiting_item.py  ordered.py  ordered_buffer.py  run_lamlet.py  scalar.py  unordered.py  vregister.py  waiting_ordered.py
python/zamlet/lamlet_test/: BUILD  test_lamlet.py
python/zamlet/maths_test/: BUILD  test_wallace.py
python/zamlet/memlet_test/: BUILD  cocotb_driver.py  conftest.py  memlet_driver.py  model_driver.py  test_cocotb_memlet.py  test_write_read.py
python/zamlet/oamlet/: oamlet.py  reduction.py  run_oamlet.py  scalar.py
python/zamlet/plan/: 01_configuration.txt  02_memory_unit_stride.txt  03_memory_strided_indexed.txt  04_memory_segment.txt  05_integer_arithmetic.txt  06_integer_widening_narrowing.txt  07_float_arithmetic.txt  08_float_widening_conversions.txt  09_reductions.txt  10_mask_operations.txt  11_permutations.txt  12_fixed_point.txt  IMPLEMENTATION_PLAN.md  VCOMPRESS_PLAN.md  plan_plan.txt  spec_index.txt
python/zamlet/shuttle_test/: BUILD  __init__.py  link.ld  shuttle_test_runner.py  test_basic.py  test_loop.S  test_simple.S
python/zamlet/tests/: BUILD  run_pytest.py  test_alu_framework.py  test_arith.py  test_conditional_kamlet.py  test_farith.py  test_indexed.py  test_indexed_load.py  test_indexed_store.py  test_strided.py  (+22 more)
(+656 files in other folders)
