module(
    name = "zamlet",
    version = "1.0.0",
)

# Bazel Central Registry
bazel_dep(name = "rules_jvm_external", version = "6.4")
bazel_dep(
    name = "rules_python",
    version = "1.3.0",
)
bazel_dep(name = "rules_scala")
bazel_dep(name = "rules_cc", version = "0.1.1")
git_override(
    module_name = "rules_scala",
    commit = "1aced658083aac6c636fcc03b7cd3952a426eda7",
    remote = "https://github.com/bazelbuild/rules_scala",
)

# Python toolchain - use Nix-provided Python
# (registered below with find_nix_python)

# Python dependencies managed in virtual environment
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "zamlet_pip_deps",
    python_version = "3.11",
    requirements_lock = "//:requirements.lock",
)
use_repo(pip, "zamlet_pip_deps")

# Scala toolchain
SCALA_VERSION = "2.13.16"

scala_config = use_extension("@rules_scala//scala/extensions:config.bzl", "scala_config")
scala_config.settings(scala_version = SCALA_VERSION)
use_repo(scala_config, "rules_scala_config")

scala_deps = use_extension("@rules_scala//scala/extensions:deps.bzl", "scala_deps")
scala_deps.settings(fetch_sources = True)
scala_deps.scala()
scala_deps.scalatest()

# Maven dependencies for Chisel
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "maven",
    artifacts = [
        "org.chipsalliance:chisel_2.13:7.0.0-RC1+22-2cb90ea2-SNAPSHOT",
        "org.chipsalliance:chisel-plugin_2.13.16:7.0.0-RC1+22-2cb90ea2-SNAPSHOT",
        "org.typelevel:cats-core_2.13:2.13.0",
        "org.typelevel:cats-kernel_2.13:2.13.0",
        "io.circe:circe-core_2.13:0.14.13",
        "io.circe:circe-generic_2.13:0.14.13",
        "io.circe:circe-parser_2.13:0.14.13",
        "io.circe:circe-yaml_2.13:1.15.0",
        "com.chuusai:shapeless_2.13:2.3.13",
        # Dependencies for RocketChip ecosystem
        "com.lihaoyi:mainargs_2.13:0.5.0",
        "com.lihaoyi:sourcecode_2.13:0.3.1",
        "org.json4s:json4s-jackson_2.13:4.0.5",
        "org.json4s:json4s-jackson-core_2.13:4.0.5",
        "org.json4s:json4s-core_2.13:4.0.5",
        "org.json4s:json4s-ast_2.13:4.0.5",
        "org.scala-lang:scala-reflect:2.13.16",
        "com.lihaoyi:os-lib_2.13:0.8.1",
        "com.lihaoyi:geny_2.13:1.0.0",
        "org.scala-lang.modules:scala-collection-compat_2.13:2.11.0",
    ],
    repositories = [
        "https://s01.oss.sonatype.org/content/repositories/snapshots",
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "maven")

# PDK configuration extraction (librelane)
pdk_config = use_extension("//bazel/flow:extensions.bzl", "pdk_config")
pdk_config.config(
    name = "sky130_fd_sc_hd_config",
    pdk = "sky130A",
    scl = "sky130_fd_sc_hd",
)
use_repo(pdk_config, "sky130_fd_sc_hd_config")

# Repository rules
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
git_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")
new_local_repository = use_repo_rule(
    "@bazel_tools//tools/build_defs/repo:local.bzl",
    "new_local_repository"
)

# RocketChip ecosystem dependencies
# Using commits from Chipyard for compatibility

# Latest commits (Jan 2026) with Chisel 7 compatibility
git_repository(
    name = "cde",
    remote = "https://github.com/chipsalliance/cde.git",
    commit = "2bcaeae2b9914bd25497ce3c6fa62dc5ca80e09f",
    build_file = "//bazel/external:cde.BUILD",
)

git_repository(
    name = "diplomacy",
    remote = "https://github.com/chipsalliance/diplomacy.git",
    commit = "fe5e131d4fc8adec14a3ce4a4935bb5c0a269871",
    build_file = "//bazel/external:diplomacy.BUILD",
)

git_repository(
    name = "hardfloat",
    remote = "https://github.com/ucb-bar/berkeley-hardfloat.git",
    commit = "072fe42b1cfc2ead6ca56e725adf964ec06f9a4c",
    build_file = "//bazel/external:hardfloat.BUILD",
)

git_repository(
    name = "rocket_chip",
    remote = "https://github.com/chipsalliance/rocket-chip.git",
    commit = "f665b8b53c88d7cc0399c746aa4cb777729a3e11",
    build_file = "//bazel/external:rocket_chip.BUILD",
)

git_repository(
    name = "shuttle",
    remote = "https://github.com/ucb-bar/shuttle.git",
    commit = "d827d2ac916e0876025d20cc60cfba6a67fdc193",
    build_file = "//bazel/external:shuttle.BUILD",
)

# Nix toolchains - find tools from Nix environment
find_nix_python = use_repo_rule("//bazel/toolchains:nix_python.bzl", "find_nix_python")
find_nix_python(name = "nix_python")

find_nix_verilator = use_repo_rule("//bazel/toolchains:nix_verilator.bzl", "find_nix_verilator")
find_nix_verilator(name = "nix_verilator")

find_nix_cocotb = use_repo_rule("//bazel/toolchains:nix_cocotb.bzl", "find_nix_cocotb")
find_nix_cocotb(name = "nix_cocotb")

# Register Nix toolchains
register_toolchains(
    "@nix_python//:toolchain",
    "@nix_verilator//:toolchain",
    "@nix_cocotb//:toolchain",
)

