[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fmvpu"
version = "0.1.0"
description = "FMVPU test package"
authors = [
    {name = "FMVPU Team"},
]
dependencies = [
    "cocotb",
    "pytest",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest",
    "cocotb",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["fmvpu*"]